--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@umijs/preset-react": "1.x",
     "@umijs/test": "^3.0.7",
     "antd": "^4.0.2",
+    "dva": "^2.4.1",
     "lint-staged": "^10.0.7",
     "mockjs": "^1.1.0",
     "prettier": "^1.19.1",
