--- a/package.json
+++ b/package.json
@@ -22,12 +22,15 @@
     "@umijs/preset-react": "1.x",
     "@umijs/test": "^3.0.7",
     "antd": "^4.0.2",
-    "dva": "^2.4.1",
     "lint-staged": "^10.0.7",
     "mockjs": "^1.1.0",
     "prettier": "^1.19.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "umi": "^3.0.7",
     "yorkie": "^2.0.0"
   },
