--- a/package.json
+++ b/package.json
@@ -20,17 +20,14 @@
     ]
   },
   "dependencies": {
-    "@types/mockjs": "^1.0.2",
+    "@ant-design/pro-layout": "^5.0.12",
     "@umijs/preset-react": "1.x",
-    "@umijs/test": "^3.2.0",
-    "antd": "^4.2.4",
+    "@umijs/test": "^3.2.14",
     "lint-staged": "^10.0.7",
-    "mockjs": "^1.1.0",
     "prettier": "^1.19.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "redux": "^4.0.5",
-    "umi": "^3.2.0",
+    "umi": "^3.2.14",
     "yorkie": "^2.0.0"
   }
 }
