--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "postinstall": "umi generate tmp",
     "prettier": "prettier --write '**/*.{js,jsx,tsx,ts,less,md,json}'",
     "test": "umi-test",
-    "test:coverage": "umi-test --coverage"
+    "test:coverage": "umi-test --coverage",
+    "my": "umi dva list model "
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
